deploy/08.docker-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-svc
  namespace: deploy
spec:
  type: NodePort
  selector:
    app: nexus-server
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: docker
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "deploy-static-ip"
    kubernetes.io/tls-acme: true 
spec:
  tls:
  - secretName: nexus-secret
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: docker-svc
          servicePort: 5000
